# AutoGestPredict

./: .gitignore  CMakeLists.txt  main.c
Car/: app.py  df.csv  modele.pkl  requirements.txt
Car/templates/: home.html
msys64/: InstallationLog.txt  components.xml  uninstall.ini
msys64/etc/pacman.d/gnupg/: pubring.gpg~  trustdb.gpg
msys64/etc/pacman.d/gnupg/private-keys-v1.d/: 9CCBA19BB63D35E228E6D1EA7BDD2FAC53BD0473.key
msys64/etc/pki/ca-trust/extracted/java/: cacerts
msys64/home/macil/: .bash_history
msys64/installerResources/com.msys2.root/: 20231026msys64.txt
msys64/mingw64/lib/cmake/libdeflate/: libdeflate-targets.cmake
msys64/mingw64/lib/girepository-1.0/: Gdk-4.0.typelib  Gsk-4.0.typelib  Gtk-4.0.typelib  HarfBuzz-0.0.typelib
msys64/mingw64/lib/pkgconfig/: epoxy.pc  fribidi.pc  gdk-pixbuf-2.0.pc  glib-2.0.pc  gmodule-2.0.pc  gmodule-no-export-2.0.pc  gtk4-win32.pc  harfbuzz-cairo.pc  harfbuzz-icu.pc  json-glib-1.0.pc  librsvg-2.0.pc  pangocairo.pc  pangofc.pc  pangoft2.pc
msys64/mingw64/lib/python3.11/: _sysconfigdata__win32_.py
msys64/mingw64/share/gir-1.0/: PangoFc-1.0.gir  Rsvg-2.0.gir
msys64/mingw64/share/glib-2.0/schemas/: gschemas.compiled
msys64/mingw64/share/locale/ca/LC_MESSAGES/: gtk40.mo
msys64/mingw64/share/locale/da/LC_MESSAGES/: gtk40.mo
msys64/mingw64/share/locale/es/LC_MESSAGES/: gtk40.mo
msys64/mingw64/share/locale/eu/LC_MESSAGES/: gtk40.mo
msys64/mingw64/share/locale/hu/LC_MESSAGES/: gtk40.mo
msys64/mingw64/share/locale/id/LC_MESSAGES/: gtk40.mo
msys64/mingw64/share/locale/kk/LC_MESSAGES/: gtk40.mo
msys64/mingw64/share/locale/ko/LC_MESSAGES/: gtk40.mo
msys64/mingw64/share/locale/lt/LC_MESSAGES/: gtk40.mo
msys64/mingw64/share/locale/lv/LC_MESSAGES/: gtk40.mo
msys64/mingw64/share/locale/sv/LC_MESSAGES/: gtk40.mo
msys64/mingw64/share/metainfo/: org.gtk.Demo4.appdata.xml  org.gtk.IconBrowser4.appdata.xml  org.gtk.WidgetFactory4.appdata.xml
msys64/mingw64/share/mime/application/: vnd.oasis.opendocument.graphics-flat-xml.xml  vnd.oasis.opendocument.presentation-flat-xml.xml  vnd.oasis.opendocument.spreadsheet-flat-xml.xml  vnd.oasis.opendocument.text-flat-xml.xml  vnd.sun.xml.calc.template.xml  vnd.sun.xml.impress.template.xml  vnd.sun.xml.impress.xml  vnd.sun.xml.math.xml  vnd.sun.xml.writer.global.xml  vnd.sun.xml.writer.xml
msys64/mingw64/share/pkgconfig/: shared-mime-info.pc
msys64/mingw64/share/vala/vapi/: librsvg-2.0.vapi
msys64/mingw64/var/cache/fontconfig/: e94a9ebfc626b3f02748a276ab637386-x86_64.cache-8  ef9c9ad8cc5857eb63cb3660bc8bd202-x86_64.cache-8
msys64/usr/share/info/: dir
msys64/var/cache/pacman/pkg/: binutils-2.41-3-x86_64.pkg.tar.zst.sig  mingw-w64-ucrt-x86_64-crt-git-11.0.0.r239.g037ba0184-1-any.pkg.tar.zst  mingw-w64-ucrt-x86_64-crt-git-11.0.0.r239.g037ba0184-1-any.pkg.tar.zst.sig  mingw-w64-ucrt-x86_64-libwinpthread-git-11.0.0.r239.g037ba0184-1-any.pkg.tar.zst  mingw-w64-ucrt-x86_64-libwinpthread-git-11.0.0.r239.g037ba0184-1-any.pkg.tar.zst.sig  mingw-w64-ucrt-x86_64-winpthreads-git-11.0.0.r239.g037ba0184-1-any.pkg.tar.zst.sig  mingw-w64-x86_64-adwaita-icon-theme-44.0-1-any.pkg.tar.zst.sig  mingw-w64-x86_64-cairo-1.18.0-1-any.pkg.tar.zst.sig  mingw-w64-x86_64-crt-git-11.0.0.r239.g037ba0184-1-any.pkg.tar.zst  mingw-w64-x86_64-crt-git-11.0.0.r239.g037ba0184-1-any.pkg.tar.zst.sig  mingw-w64-x86_64-fontconfig-2.14.2-1-any.pkg.tar.zst.sig  mingw-w64-x86_64-fribidi-1.0.13-1-any.pkg.tar.zst  mingw-w64-x86_64-gdk-pixbuf2-2.42.10-4-any.pkg.tar.zst  mingw-w64-x86_64-giflib-5.2.1-3-any.pkg.tar.zst  mingw-w64-x86_64-graphene-1.10.8-2-any.pkg.tar.zst  mingw-w64-x86_64-gtk-update-icon-cache-3.24.38.r43.g0f717ca-1-any.pkg.tar.zst.sig  mingw-w64-x86_64-gtk4-4.12.3-1-any.pkg.tar.zst.sig  mingw-w64-x86_64-harfbuzz-8.2.2-1-any.pkg.tar.zst  mingw-w64-x86_64-libdeflate-1.19-1-any.pkg.tar.zst.sig  mingw-w64-x86_64-libjpeg-turbo-3.0.1-1-any.pkg.tar.zst  mingw-w64-x86_64-libjpeg-turbo-3.0.1-1-any.pkg.tar.zst.sig  mingw-w64-x86_64-libmangle-git-11.0.0.r239.g037ba0184-1-any.pkg.tar.zst  mingw-w64-x86_64-libmangle-git-11.0.0.r239.g037ba0184-1-any.pkg.tar.zst.sig  mingw-w64-x86_64-libpng-1.6.40-1-any.pkg.tar.zst  mingw-w64-x86_64-librsvg-2.57.0-2-any.pkg.tar.zst.sig  mingw-w64-x86_64-libwebp-1.3.2-1-any.pkg.tar.zst.sig  mingw-w64-x86_64-libxml2-2.11.5-1-any.pkg.tar.zst  mingw-w64-x86_64-libxml2-2.11.5-1-any.pkg.tar.zst.sig  mingw-w64-x86_64-openssl-3.1.4-1-any.pkg.tar.zst.sig  mingw-w64-x86_64-pango-1.50.14-4-any.pkg.tar.zst  mingw-w64-x86_64-shared-mime-info-2.3-1-any.pkg.tar.zst  mingw-w64-x86_64-sqlite3-3.43.2-1-any.pkg.tar.zst  mingw-w64-x86_64-sqlite3-3.43.2-1-any.pkg.tar.zst.sig  mingw-w64-x86_64-tools-git-11.0.0.r239.g037ba0184-1-any.pkg.tar.zst.sig  mingw-w64-x86_64-winpthreads-git-11.0.0.r239.g037ba0184-1-any.pkg.tar.zst  mingw-w64-x86_64-winstorecompat-git-11.0.0.r239.g037ba0184-1-any.pkg.tar.zst.sig  mingw-w64-x86_64-xxhash-0.8.2-1-any.pkg.tar.zst  mingw-w64-x86_64-zlib-1.3-1-any.pkg.tar.zst  texinfo-7.1-1-x86_64.pkg.tar.zst.sig  texinfo-tex-7.1-1-x86_64.pkg.tar.zst.sig
msys64/var/lib/pacman/local/base-devel-2022.12-2/: desc
msys64/var/lib/pacman/local/bash-5.2.015-2/: desc
msys64/var/lib/pacman/local/binutils-2.41-3/: desc
msys64/var/lib/pacman/local/brotli-1.1.0-1/: desc
msys64/var/lib/pacman/local/bsdtar-3.7.2-1/: desc
msys64/var/lib/pacman/local/curl-8.4.0-1/: mtree
msys64/var/lib/pacman/local/dash-0.5.12-1/: desc
msys64/var/lib/pacman/local/db-5.3.28-5/: desc
msys64/var/lib/pacman/local/diffstat-1.65-1/: desc
msys64/var/lib/pacman/local/diffutils-3.10-1/: desc
msys64/var/lib/pacman/local/filesystem-2023.02.07-1/: desc
msys64/var/lib/pacman/local/gdbm-1.23-1/: desc
msys64/var/lib/pacman/local/gnupg-2.2.41-1/: desc
msys64/var/lib/pacman/local/grep-1~3.0-6/: desc
msys64/var/lib/pacman/local/inetutils-2.4-2/: desc
msys64/var/lib/pacman/local/info-7.1-1/: desc
msys64/var/lib/pacman/local/libargp-20110921-4/: desc
(+125 files in other folders)
